[package]
name = "cloner"
version = "1.0.0"
authors = ["Jack Michaud <jack@lomz.me>"]
edition = "2018"

[lib]
name = "cloner_lib"
path = "src/cloner_lib.rs"

[[bin]]
name = "cloner"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-url-parse = "0.3.1"
